# cc-basic

cmake/: CMakeLists.txt  helloworld.cc  run.sh
cmake/hello/: CMakeLists.txt  hello.cc
cmake/world/: CMakeLists.txt  world.cc  world.h
